f: Fix text alignment

--- a/public/index.css
+++ b/public/index.css
@@ -3,3 +3,11 @@ canvas {
   display: block;
   border: 1px solid black;
 }
+
+@font-face {
+  font-family: "BMDOHYEON";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMDOHYEON.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
